src/KAC/SiteBundle/Resources/public/css/forms/forms.scss
/* ... */
div.selector.disabled span {
    color: $colourGreyExtraLight;
}

div.selector select {
    width: 100%;
    height: 38px;

    position: absolute;
    top: 0;
    left: 0;

    @include fontSize($fontSizeMedium);
    cursor: pointer;
    @include hideYetClickable;
}

div.selector:active,
div.selector.active {
    @include boxGlow($primaryColour, 10px, 0, 1);
}

div.selector:active span,
div.selector.active span {
    color: $colourBlack;
}

div.selector.focus,
div.selector.hover,
div.selector:hover {
    @include boxGlow($primaryColour, 10px, 0, 1);
}

div.selector.focus span,
div.selector.hover span,
div.selector:hover span {
    color: $colourBlack;
}

div.selector.focus:active,
div.selector.focus.active,
div.selector:hover:active,
div.selector.active:hover {
    @include boxGlow($primaryColour, 10px, 0, 1);
}

div.selector.focus:active span,
div.selector:hover:active span,
div.selector.active:hover span,
div.selector.focus.active span {
    color: $colourBlack;
}

div.selector.disabled span,
div.selector.disabled:active span,
div.selector.disabled.active span {
    color: $colourGreyExtraLight;
}

header.error {
    @include highlightedVerticalGradientDarkRed;
}

.form-element-error {
    padding: $spacingSmall 0 $spacingSmall 20px !important;
    margin: 5px -10px 10px -30px !important;

    background: $colourRedExtraExtraLight url("#{$cssPath}/resources/images/icons/warning.png") 6px 14px no-repeat;
    @include borderRadius($radiusSize, 0, 0, $radiusSize);
    @include boxGlow($colourRed, 3px, 0, 0.5);
}

.form-element-error label,
.error label {
    color: $colourRed;
}

.form-element-error small,
.error small {
    color: $colourRed;
    text-transform: uppercase;
}

.form-element-error small ul,
.error small ul {
    margin: 0;
    padding: 0;
}

.form-element-error small ul li,
.error small ul li {
    list-style: none;
    background: transparent url("#{$cssPath}/resources/images/icons/error_small.png") top left no-repeat;
    line-height: 12px;
    padding: 0 0 0 17px;
    margin: 2px 0 0 0;
}

.form-element-error input,
.form-element-error textarea,
.form-element-error .selector,
.form-element-error .uniform-multiselect,
.form-element-error .radio,
.form-element-error .checker,
.form-element-error .uploader,
.form-element-error .select2-choice,
.error input,
.error textarea,
.error .selector,
.error .uniform-multiselect,
.error .radio,
.error .checker,
.error .uploader,
.error .select2-choice {
    border: 1px solid $colourRedExtraLight;
}

.form-element-error input:focus,
.form-element-error textarea:focus,
.form-element-error .selector:focus,
.form-element-error .uniform-multiselect:focus,
.form-element-error .radio:focus,
.form-element-error .checker:focus,
.form-element-error .uploader:focus,
.form-element-error input:active,
.form-element-error textarea:active,
.form-element-error .selector:active,
.form-element-error .uniform-multiselect:active,
.form-element-error .radio:active,
.form-element-error .checker:active,
.form-element-error .uploader:active,
.form-element-error input:hover,
.form-element-error textarea:hover,
.form-element-error .selector:hover,
.form-element-error .uniform-multiselect:hover,
.form-element-error .radio:hover,
.form-element-error .checker:hover,
.form-element-error .uploader:hover,
.error input:focus,
.error textarea:focus,
.error .selector:focus,
.error .uniform-multiselect:focus,
.error .radio:focus,
.error .checker:focus,
.error .uploader:focus,
.error input:active,
.error textarea:active,
.error .selector:active,
.error .uniform-multiselect:active,
.error .radio:active,
.error .checker:active,
.error .uploader:active,
.error input:hover,
.error textarea:hover,
.error .selector:hover,
.error .uniform-multiselect:hover,
.error .radio:hover,
.error .checker:hover,
.error .uploader:hover {
    @include noBoxShadow;
}

table.form-table {
    width: 100%;

    border-collapse: collapse;
    border: 0 none;
    @include borderRadius($radiusSize, $radiusSize, 0, 0);
}

table.form-table th {
    border-collapse: collapse;
    border: 1px solid $colourGrey;
    padding: $spacingMedium $spacingSmall;
    text-align: left;
    color: $colourBlack;
    @include highlightedVerticalGradientGrey;
}

table.form-table td {
    border-collapse: collapse;
    padding: 5px;
    border: 1px solid $colourGreyLight;
    background: $colourWhite;
    vertical-align: middle;
}

table.form-table ul {
    margin: 0;
    padding: 0;
}

table.form-table ul li {
    margin: 0;
    padding: 0;
    list-style: none;
    font-size: 10px;
    line-height: 14px;
}

.select2-container {
    position: relative;
    display: inline-block;
    zoom: 1;

    *display: inline;
    vertical-align: top;
}

.select2-container,
.select2-drop,
.select2-search,
.select2-search input {
    @include borderBox;
}

.select2-container .select2-choice {
    padding: 8px $spacingMedium;

    display: block;
    overflow: hidden;
    position: relative;

    outline: 0;
    white-space: nowrap;
    text-decoration: none;
    -webkit-background-clip: padding-box;
    -moz-background-clip: padding;
    background-clip: padding-box;
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    font-family: $primaryFontFamily;
    @include equalBorderRadius($radiusSize);
    @include fontSize($fontSizeMedium);
    @include verticalGradientGreyExtraLightToWhite;
    @include transitionAll(0.3s, ease-in-out);
    font-weight: normal;
    color: $textColour;
    line-height: 22px;
    border: 1px solid $colourGreyLight;
}

.select2-container.select2-drop-above .select2-choice {
    border-bottom-color: $colourGreyLight;
    @include borderRadius(0, 0, $radiusSize, $radiusSize);
    @include verticalGradientGreyExtraLightToWhite;
}

.select2-container .select2-choice span {
    margin-right: 26px;

    @include ellipsis;
}
/* ... */

